--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <a href="tel:+18087216792">+1 808-721-6792</a>
                   </div>
                   <ul class="modal--options">
-                    <li><a href="https://www.linkedin.com/in/kiara-vong-697843217/">LinkedIn</a></li>
+                    <li><a href="https://www.linkedin.com/in/kiara-vong/">LinkedIn</a></li>
                     <li><a href="https://github.com/kiara-v">GitHub</a></li>
                     <li><a href="mailto:kiara_vong@brown.edu">Email Me</a></li>
                   </ul>
@@ -239,16 +239,16 @@
                 </div>
                 <div class="work-request--information">
                   <div class="information-name">
-                    <input id="name" type="text" spellcheck="false" required name="name"> 
+                    <input id="name" type="text" spellcheck="false" required name="Name"> 
                     <label for="name">Name</label>
                   </div>
                   <div class="information-email">
-                    <input id="email" type="email" spellcheck="false" required name="_replyto">
+                    <input id="email" type="email" spellcheck="false" required name="Email">
                     <label for="email">Email</label>
                   </div>
                 </div>
                 <div class="information-message">
-                  <textarea style="color: black" id="message" rows="4" cols="45" name="message"></textarea>
+                  <textarea style="color: black" id="message" rows="4" cols="85" name="Message"></textarea>
                   <br>
                   <br>
                 </div>
