--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                   </div>
                 </div>
                 <div class="information-message">
-                  <textarea style="color: black" id="message" rows="4" cols="85" name="Message"></textarea>
+                  <textarea style="color: black" id="message" rows="4" cols="85" name="Message" overflow="auto"></textarea>
                   <br>
                   <br>
                 </div>
