fixed text area

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                   </div>
                 </div>
                 <div class="information-message">
-                  <textarea style="color: black" id="message" rows="4" cols="85" name="Message" overflow="auto"></textarea>
+                  <textarea id="message" rows="4" name="Message" style="color: black; width: calc(80vw); max-width: 700px; height: calc(14vh)"></textarea>
                   <br>
                   <br>
                 </div>
