--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="HTML5 website template">
-  <meta name="keywords" content="global, template, html, sass, jquery">
-  <meta name="author" content="Bucky Maler">
+  <meta name="description" content="HTML5 website">
+  <meta name="keywords" content="global, html, sass, jquery">
+  <meta name="author" content="Kiara Vong">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -24,6 +24,7 @@
   <div class="container"><div class="outer-nav--return"></div>
     <div id="viewport" class="l-viewport">
       <div class="l-wrapper">
+        <!-- HEADER -->
         <header class="header">
           <a class="header--logo" href="#0">
             <img src="assets/img/logo.png" alt="Logo">
@@ -34,6 +35,7 @@
             <span></span>
           </div>
         </header>
+        <!-- NAVIGATION BAR -->
         <nav class="l-side-nav">
           <ul class="side-nav">
             <li class="is-active"><span>Home</span></li>
@@ -43,8 +45,10 @@
             <li><span>Message</span></li>
           </ul>
         </nav>
+        <!-- CONTENT -->
         <ul class="l-main-content main-content">
           <li class="l-section section section--is-active">
+            <!-- INTRODUCTION -->
             <div class="intro">
               <div class="intro--banner">
                 <h1>Hi,<br>my name's<br>Kiara!<br></h1>
@@ -65,7 +69,7 @@
                 </a>
                 <a href="#0">
                   <h3>Languages</h3>
-                  <p>Java, Python, C, HTML, CSS, Assembly, LaTex</p>
+                  <p>Java, Python, C, HTML, CSS, Assembly, LaTeX</p>
                 </a>
                 <a href="#0">
                   <h3>Interests</h3>
@@ -75,10 +79,12 @@
             </div>
           </li>
           <li class="l-section section">
+            <!-- PROJECTS -->
             <div class="work">
               <h2>Major Projects</h2>
               <div class="work--lockup">
                 <ul class="slider">
+                  <!-- project items -->
                   <li class="slider--item slider--item-left">
                     <a href="#0">
                       <div class="slider--item-image">
@@ -151,6 +157,7 @@
             </div>
           </li>
           <li class="l-section section">
+            <!-- ABOUT -->
             <div class="about">
               <div class="about--banner">
                 <h2>A<br>little<br>about<br>me.</h2>
@@ -179,6 +186,7 @@
             </div>
           </li>
           <li class="l-section section">
+            <!-- CONTACT INFORMATION -->
             <div class="contact">
               <div class="contact--lockup">
                 <div class="modal">
@@ -199,8 +207,9 @@
             </div>
           </li>
           <li class="l-section section">
+            <!-- MESSAGE FORM -->
             <div class="hire">
-              <h2>Contact</h2>
+              <h2>Message</h2>
               <!-- form setup -->
               <form class="work-request" method="POST" action="https://formspree.io/f/xpzbwyby" enctype="multipart/form-data" name=”EmailForm”>
                 <div class="work-request--options">
@@ -248,7 +257,7 @@
                   </div>
                 </div>
                 <div class="information-message">
-                  <textarea id="message" rows="4" name="Message" style="color: black; width: calc(80vw); max-width: 700px; height: calc(14vh)"></textarea>
+                  <textarea id="message" rows="4" name="Message" style="color: black; width: calc(80vw); max-width: 700px; height: calc(14vh); -webkit-box-align: center"></textarea>
                   <br>
                   <br>
                 </div>
