--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="author" content="Kiara Vong">
   <link rel="stylesheet" href="assets/css/main.css">
-  <link rel="stylesheet" href="assets/css/home.css">
+  <link rel="stylesheet" href="assets/css/projects.css">
   <link rel="shortcut icon" href="assets/img/logo.png"/>
-  <script src="https://unpkg.com/htmlincludejs"></script>
 </head>
 <body>
 
@@ -39,38 +38,33 @@
         <ul class="l-main-content main-content">
           <li class="l-section section section--is-active">
             <!-- INTRODUCTION -->
-            <div class="intro">
-              <div class="intro--banner">
-                <h1>Howdy,<br>my name's<br>Kiara!<br></h1>
-                <button class="cta">Message Me
-                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
-                  <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
-                    <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
-                  </g>
-                  </svg>
-                  <span class="btn-background"></span>
-                </button>
-                <img style="transform: scaleX(-1)" src="assets/img/dino.png" alt="Welcome">
-              </div>
-              <div class="intro--options">
-                <a href="#0">
-                  <h3>Summary</h3>
-                  <p></p>
-                </a>
-                <a href="#1">
-                  <h3>Languages</h3>
-                  <p></p>
-                </a>
-                <a href="#2">
-                  <h3>Interests</h3>
-                  <p></p>
-                </a>
-              </div>
+            <div class="work">
+                <h1>My Projects</h1>  
             </div>
           </li>
-          <!-- ABOUT -->
           <li class="l-section section">
-            <include src="./about.html"></include>
+            <!-- PROJECTS -->
+            <div class="work">
+              <h2>Flappy Bird AI</h2>
+            </div>
+          </li>
+          <li class="l-section section">
+            <!-- ABOUT -->
+            <div class="work">
+                <h2>Tetris</h2>
+            </div>
+          </li>
+          <li class="l-section section">
+            <!-- CONTACT INFORMATION -->
+            <div class="work">
+				<h2>Pacman</h2>
+            </div>
+          </li>
+          <li class="l-section section">
+            <!-- MESSAGE FORM -->
+            <div class="work">
+              <h2>Doodle Jump</h2>
+            </div>
           </li>
         </ul>
       </div>
@@ -78,15 +72,15 @@
   </div>
   <ul class="outer-nav">
     <li class="is-active">Home</li>
-    <li>About</li>
-    <li>Projects</li>
-    <li>Contact</li>
+    <li>Flappy</li>
+    <li>Tetris</li>
+    <li>Pacman</li>
+    <li>Doodle</li>
   </ul>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
 <script src="assets/js/functions-min.js"></script>
-<include src="./about.html"></include>
 </body>
 </html>
